微信两个页面跳转bug

--- a/_posts/2016-01-11-webpack入门.md
+++ b/_posts/2016-01-11-webpack入门.md
@@ -4,6 +4,8 @@ title: webpack 入门
 tags: [webpack]
 ---
 
+[下一篇](http://lcat.me/2016/08/04/nodejs-glob/)
+
 ### 基本使用
 
 > $ npm install webpack -g  // 全局安装webpack
