webview cache bug

--- a/_posts/2016-08-22-微信两个页面互相跳转BUG.md
+++ b/_posts/2016-08-22-微信两个页面互相跳转BUG.md
@@ -14,3 +14,18 @@ tags: [微信, 跳转]
 
 地址： [安卓版微信Webview中两个页面互相跳转的BUG](http://heeroluo.net/article/detail/132)
 
+
+看完马上打开京东的看了下，原来之前测的京东链接后面都有加 `sid=×××`
+
+这篇文章不为啥，就记录这个奇葩的bug。解决方法：
+
+```js
+$('body').on('click', function(e) {
+    var target = e.target;
+    if (isAndroid && isInWX && target.tagName === 'A' && !target.search) {
+        // 只设为问号无效，所以还是得加个参数
+        // 其实很想换成另一个f开头的单词
+        target.search = '?fixwx';
+    }
+});
+```
