--- a/_posts/2016-10-15-前端进阶.md
+++ b/_posts/2016-10-15-前端进阶.md
@@ -24,7 +24,7 @@ tags: [前端进阶]
 
 尝试自己动手实现个dialog？
 
-##模板引擎
+## 模板引擎
 
 [handlebars](http://handlebarsjs.com/)  [nunjucks](https://mozilla.github.io/nunjucks/)  [artTemplate](https://github.com/aui/artTemplate)  ~[template-chooser](http://garann.github.io/template-chooser/)
 
@@ -83,6 +83,12 @@ tags: [前端进阶]
 ## 微信小程序
 
 试着做github客户端、cnode、知乎日报等。
+
+## app 开发
+
+* [react native](https://facebook.github.io/react-native/)  [weex](https://alibaba.github.io/weex/)
+* [phonegap](http://phonegap.com/)  [ionic](http://ionicframework.com/)
+
 
 ## nodejs
 
