--- a/_posts/2017-10-20-视频压缩转换格式.md
+++ b/_posts/2017-10-20-视频压缩转换格式.md
@@ -66,7 +66,7 @@ ffmpeg -i input.mp4 -f image2 -vf fps=fps=1 out%d.png
 # 导出序列帧
 # -r 帧率
 # -q:v 图片质量 
-ffmpeg -i input.mp4 -r 10 -q:v 2 out%04.png
+ffmpeg -i input.mp4 -r 10 -q:v 2 out%04d.png
 
 # 导出gif
 # -t 时长
