更新保存图片

--- a/_posts/2020-01-06-保存图片.md
+++ b/_posts/2020-01-06-保存图片.md
@@ -19,10 +19,12 @@ tags: [web, 保存图片]
 <a href="" id="download-link" style="display: none;"></a>
 ```
 ```js
-let link = document.getElementById('download-link');
-link.download = +new Date() + '.jpeg';
-link.href = imageUrl;
-link.click();
+function downloadImage(imageUrl) {
+    let link = document.getElementById('download-link');
+    link.download = +new Date() + '.jpeg';
+    link.href = imageUrl;
+    link.click();
+}
 ```
 
 这边遇到直接 `document.createElement('a')` 创建 `link`，在一些 `Firefox` 版本无效，改成 `getElementById` 获取真实 `dom` 解决。
@@ -42,6 +44,40 @@ function isSupportDownload() {
 ```
 
 * 注 `download` 对 `base64` 也很友好，暂时没遇到兼容问题（不要被打脸）
+
+> *2020-01-17 更新*
+> 
+> 发现 Edge V42 下 isSupportDownload 返回 true. 但是确没下载，还很诡异的触发了 beforeunload 事件(导致业务逻辑这边销毁一些实例)
+> 
+> 查了下，ie 支持 msSaveBlob 下载图片，所以上面那个 downloadImage 函数做下兼容修改
+>
+
+```js
+function downloadImage(imageUrl) {
+    var canvas = document.createElement('canvas');
+    var saveName = +new Date() + '.jpeg';
+    if (canvas.msToBlob && window.navigator.msSaveBlob) {
+        var img = new Image();
+        img.onload = () => {
+            canvas.width = img.width;
+            canvas.height = img.height;
+            var ctx = canvas.getContext('2d');
+            ctx.drawImage(img, 0, 0);
+            var blob = canvas.msToBlob();
+            window.navigator.msSaveBlob(blob, saveName);
+        }
+        img.src = imageUrl;
+    }
+    else {
+        let link = document.getElementById('download-link');
+        link.download = saveName;
+        link.href = imageUrl;
+        link.click();
+    }
+}
+```
+
+
 
 
 ## 长按保存
