--- a/_posts/2022-02-22-获取摄像头列表.md
+++ b/_posts/2022-02-22-获取摄像头列表.md
@@ -14,7 +14,7 @@ navigator.mediaDevices.enumerateDevices().then(devices => {
 
 在自测的时候，发现在`ios15`下，打印的 `devices` kind=videoinput的只有一个，并且`label` 与 `deviceId` 都为空(见下图)，真实机器是有前后摄像头的。
 
-![控制台](/public/images/2022/media.jpeg){:height="50%" width="50%"}
+![控制台](./public/images/2022/media.jpeg){:height="50%" width="50%"}
 
 猜测应该是相机权限问题，点进去设置查看safari的相机权限为`询问`，如果改成`允许`，上面代码就返回正常数据(见上图)
 
