图片svg等主题色替换

--- a/_posts/2022-12-07-svg图片等主题色替换.md
+++ b/_posts/2022-12-07-svg图片等主题色替换.md
@@ -4,7 +4,7 @@ title: 图片svg等主题色替换
 tags: [排序, order]
 ---
 最近有个需求，替换页面主题色，有个loading动画，有3个图层包括模糊阴影等。
-![svg](./public/images/2022/loading.svg){:height="50%" width="50%"}
+![svg](https://lcat.github.io/lcat.me/public/images/2022/loading.svg){:height="50%" width="50%"}
 
 ```html
 <svg width="59" height="59" viewBox="0 0 59 59" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -360,4 +360,4 @@ console.log(result.filter);
 ```
 
 
-## [最终demo请点击查看](./public/html/loading.html)
+## [最终demo请点击查看](https://lcat.github.io/lcat.me/public/html/loading.html)
